# helix-bio

./: .gitignore  Containerfile  Makefile  README.md  UPGRADE_2026.md  docker-compose.yml  pyproject.toml
assets/: index.html
bundle/: bundle.yaml  persona.md
bundle/evals/: golden.jsonl  rubric.md
bundle/memory/: seed.md
bundle/skills/: 01-faithfulness-gate.md  02-dual-use-safety.md  03-uniprot-ontology.md  04-mesh-ontology.md  05-chembl-ontology.md  06-clinical-claim-router.md
bundle/tools/: mcp_server.py
bundle/verifier/: checker.py
docs/: _config.yml  architecture-tradeoff.md  architecture.md  index.html  index.md  system-design.md
docs/blocks/: 01-clinical-intake.md  02-knowledge-router.md  03-ontology-grounding.md  04-tool-layer.md  05-inspectable-trace.md  06-faithfulness-gate.md  07-dual-use-safety.md  08-memory-per-researcher.md  09-cost-routing.md  10-eval-benchmarks.md
skills/ontology-bound-claim/: SKILL.md
src/helix_bio/: __init__.py  app.py  dual_use.py  faithfulness.py  memory.py  models.py  ontology.py  pipeline.py  router.py  tools.py  trace.py  tui.py  tui_theme.py  widgets.py
src/helix_bio/skills_adapter/: __init__.py
tests/: test_app.py  test_dual_use.py  test_faithfulness.py  test_models.py  test_ontology.py  test_pipeline.py  test_router.py  test_skills_adapter.py  test_tools.py
